@@ -669,6 +669,16 @@ NsTclThread(void *arg)
 	Ns_DStringInit(&ds);
 	dsPtr = &ds;
     }
+
+    /*
+     * Need to ensure that the server has completed it's initializtion
+     * prior to initiating TclEval.
+     * Note that we do a quick-and-dirty test first.
+     */
+    if( !nsconf.state.started ) {
+        Ns_WaitForStartup();
+    }
+
     (void) Ns_TclEval(dsPtr, argPtr->server, argPtr->script);
     ns_free(argPtr);
     if (!argPtr->detached) {
